cluster/home/l1nkr-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l1nkrsite
  namespace: l1nkrsite
  labels:
    app: l1nkrsite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: l1nkrsite
  template:
    metadata:
      labels:
        app: l1nkrsite
    spec:
      containers:
      - image: ghcr.io/chrede88/l1nkrdocker:v1.0.5
        name: l1nkrsite
        imagePullPolicy: Always
      imagePullSecrets:
        - name: l1nkrsite-ghcr-secret
