cluster/home/l1nkr-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: l1nkrsite-web-svc
  namespace: l1nkrsite
spec:
  selector:
    app: l1nkrsite
  ports:
    - name: http
      targetPort: 8080
      port: 80
